2001-06-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-expire-nov-databases): New command.
	(nnshimbun-request-expire-articles): New function.
	(nnshimbun-keep-unparsable-dated-articles): New variable.
	(nnshimbun-keep-last-article): New variable.
	(nnshimbun-insert-nov): Rewrite using `nnshimbun-string-or'.
	(nnshimbun-string-or): New macro.
	(nnshimbun-tmp-string): New internal variable.
	(TopLevel): Require `message' for `message-make-date'.

2001-05-30  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-clfns.el (find-cl-run-time-functions): Remove a
	useless non-global var; scroll the output window automatically.

2001-05-31  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-header-xref): Removed.
	(nnshimbun-check-header): Removed.
	(nnshimbun-make-shimbun-header): Don't call
	`nnshimbun-header-xref'.
	(nnshimbun-request-group): Simplified.
	(nnshimbun-request-article-1): Call `nnshimbun-replace-nov-entry'
	instead of `nnshimbun-check-header'.
	(nnshimbun-insert-nov): New function.
	(nnshimbun-generate-nov-database): Call `nnshimbun-insert-nov'
	instead of `nnheader-insert-nov'.
	(nnshimbun-replace-nov-entry): New function.

2001-05-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-clfns.el (find-cl-run-time-functions): Add a parser for
	`dolist'; protect against errors.

2001-05-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-retrieve-headers-with-nov): Don't
	use `last'.
	(nnshimbun-make-shimbun-header): Use the following macros.
	(nnshimbun-mail-header-from): New macro whose definition will be
	changed statically for Gnus or gnus.
	(nnshimbun-mail-header-subject): Ditto.
	(TopLevel): Don't require `gnus-clfns'.

	* lisp/gnus.el: Add autoload for `find-cl-run-time-functions'.

	* lisp/gnus-clfns.el (find-cl-run-time-functions): New command for
	the developers.
	(cl-run-time-functions): New variable.
	(TopLevel): Don't require `cl' at run-time.
