@@ -1,3 +1,8 @@
+2001-06-07  Katsumi Yamaoka <yamaoka@jpl.org>
+
+	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Fix
+	inhibiting the expiring.
+
 2001-06-06  Katsumi Yamaoka <yamaoka@jpl.org>
 
 	* lisp/nnshimbun.el (nnshimbun-expire-nov-databases): New command.
